# sportsbook-engine

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/: ADAPTER_ARCHITECTURE.md  ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  DATA_FLOW.md  DIRECTORY_TO_RESPONSIBILITY_MAPPING.md  DOMAIN_MODEL.md  ENGINE_RESPONSIBILITIES.md  EVENT_MODEL.md  IMPLEMENTATION_MILESTONES.md  PHASE_1.md  README.md  RESEARCH_ROADMAP.md
sportsbook/common/: config.py  log_names.py  logging_manager.py
sportsbook_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/common/: test_config.py  test_logging_manager.py
